@@ -2,7 +2,7 @@
 from __future__ import unicode_literals
 import frappe
 
-__version__ = "3.4.4"
+__version__ = "3.4.5"
 
 
 def console(*data):
